--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,14 +15,14 @@
       <div class="col-lg-6">
         <div class="card mt-5">
           <div class="card-body">
-            <h5 class="card-title text-center">Image Upload Temporary</h5>
-            <p class="card-description text-center">The Image deleted after 7 day</p>
-            <form action="/upload/<%= field %>" method="POST" enctype="multipart/form-data">
+            <h5 class="card-title text-center">File Upload Temporary</h5>
+            <p class="card-description text-center">The File deleted after 7 day<br>press ctrl+v to paste screenshot</p>
+            <form action="/upload/<%= field %>" id="formupload" method="POST" enctype="multipart/form-data">
               <div class="mb-3">
-                <input type="file" class="form-control custom-file-input" name="file" id="file" required accept="image/*">
+                <input type="file" class="form-control custom-file-input" name="file" id="file" required>
               </div>
               <div class="d-grid">
-                <button onsubmit="loading()" class="btn btn-primary" id="btns"><span id="picius" style="visibility: hidden;" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> <span id="status">Upload</span></button>
+                <button ondblclick="alert('Please No Spam Kids');document.write('Bing Chilling')" onsubmit="loading()" class="btn btn-primary" id="btns"><span id="picius" style="visibility: hidden;" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> <span id="status">Upload</span></button>
               </div>
             </form>
             <br>
@@ -34,24 +34,34 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="?id=poolsatu">Asia Pacific (APAC) 1</a></li>
                 <li><a class="dropdown-item" href="?id=pooldua">Asia Pacific (APAC) 2</a></li>
-                <li><a class="dropdown-item" href="?id=enamsatu">Eastern North America (ENAM) 1</a></li>
+                <li><a class="dropdown-item" href="?id=enamsatu">Eastern North America (ENAM) (All File Supported) 1</a></li>
                 <li><a class="dropdown-item" href="?id=weursatu">Western Europe (WEUR) 1</a></li>
-                <li><a class="dropdown-item" href="?id=eeursatu">Eastern Europe (EEUR) 1</a></li>
+                <li><a class="dropdown-item" href="?id=eeursatu">Eastern Europe (EEUR) (All File Supported) 1</a></li>
                 <li><a class="dropdown-item" href="?id=wnamsatu">Western North America (WNAM) 1</a></li>
                 <li><hr></li>
                 <li><a class="dropdown-item" href="/./">Random Server</a></li>
               </ul>
             </div>
             <p style="margin-top: 10px;font-size: 13px;color: green;">Selected: <%= field %></p>
-            <p style="margin-top: -10px;">Please <a href="https://sociabuzz.com/aisbir_gans/donate">Donate</a> to keep our server online:(</p>
+            <p style="margin-top: -10px;">Please <a href="https://sociabuzz.com/aisbir_gans/donate">Donate</a> to keep our server online:( <br>Read <a href="/rule">rule</a> for important information</p>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <script>
+    const form = document.getElementById("formupload");
+const fileInput = document.getElementById("file");
+
+window.addEventListener('paste', e => {
+  fileInput.files = e.clipboardData.files;
+  form.submit();
+});
+  </script>
   <div class="text-center justify-content-center" style="padding-top: 10px;">
   <code>Server Hosted With 💖 By aisbircube<br>Keep Your Link Safe!</code></div>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/./index.js"></script>
 </body>
