--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,14 +18,35 @@
           <div class="card-body">
             <h5 class="card-title text-center">File Upload</h5>
             <p class="card-description text-center">Upload Your random file here<br>press ctrl+v to paste screenshot</p>
-            <form action="/upload/<%= field %>" id="formupload" method="POST" enctype="multipart/form-data">
+            <form action="/upload/<%= field %>/api" id="formupload" method="POST" enctype="multipart/form-data">
               <div class="mb-3">
-                <input type="file" class="form-control custom-file-input" name="file" id="file" required>
+                <input type="file" class="form-control custom-file-input" name="file" id="file">
+              </div>
+              <div class="mb-3 form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="check" name="check">
+                <label class="form-check-label" for="check">Json Mode</label>
               </div>
               <div class="d-grid">
                 <button ondblclick="alert('Please No Spam Kids');document.write('Bing Chilling')" onsubmit="loading()" class="btn btn-primary" id="btns"><span id="picius" style="visibility: hidden;" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> <span id="status">Upload</span></button>
               </div>
             </form>
+            
+            <script>
+              const formapis = document.getElementById('formupload');
+              const checkbox = document.getElementById('check');
+              const uuid = '<%= field %>';
+            
+              checkbox.addEventListener('input', function() {
+                if (this.checked) {
+                  formapis.action = `/upload/${uuid}/json`;
+                  location.href = '#json';
+                } else {
+                  formapis.action = `/upload/${uuid}/api`;
+                  location.href = '#api';
+                }
+              });
+            </script>
+            
             <br>
             <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
